syntax = "proto3";
package board;
import "google/protobuf/timestamp.proto";

// 서비스
service BoardService {
  rpc list(ListBoardRequest) returns (ListBoardResponse);
  rpc create(CreateBoardRequest) returns (CreateBoardResponse);
  rpc info(GetBoardRequest) returns (GetBoardResponse);
  rpc update(UpdateBoardRequest) returns (UpdateBoardResponse);
  rpc delete(DeleteBoardRequest) returns (DeleteBoardResponse);
}

message Board {
  int32 id = 1;
  string title = 2;
  string content = 3;
  int32 thumbsUp = 4;
  int32 thumbsDown = 5;
  string userId = 6;
  google.protobuf.Timestamp createdAt = 7;  
  google.protobuf.Timestamp updatedAt = 8;  
  string ownerYn = 9;
}

// 결과 코드
enum ResultCode {
  SUCCESS = 0;
  FAIL = 1;
};

// 결과
message BoardResult {
  ResultCode resultCode = 1;
}

message BoardId {
  int32 id = 1;
  string userId = 2;
}

message CreateBoardRequest {
  string title = 1;
  string content = 2;
  string userId = 3;
}

message CreateBoardResponse {
  Board board = 1;
}

message ListBoardRequest  {
  optional int32 limit =1;
  optional int32 page = 2;
  optional string userId = 3;
}

message ListBoardResponse  {
  repeated Board board = 1;
}

message GetBoardRequest {
  int32 id = 1;
  optional string user_id = 2;
}

message GetBoardResponse {
  Board board = 1;
}

message UpdateBoardRequest {
  int32 id = 1;
  string title = 2;
  string content = 3;
  string userId = 4;
}

message UpdateBoardResponse {
  BoardResult boardResult = 1;
}

message DeleteBoardRequest {
  int32 id = 1;
  string userId = 2;
}

message DeleteBoardResponse {
  BoardResult boardResult = 1;
}